test/ui/tests/lowering/module-headers/attributes-conflict-with-out-of-line-module-ones.stderr
error[E006]: multiple `doc-attributes` attributes
 --> ${TEST_FOLDER}/lowering/module-headers/attributes-conflict-with-out-of-line-module-ones.lushui:6:1
  |
6 | @doc-attributes
  | ^^^^^^^^^^^^^^^ duplicate or conflicting attribute
  |
 --> ${TEST_FOLDER}/lowering/module-headers/attributes-conflict-with-out-of-line-module-ones.lushui:8:5
  |
8 |     @doc-attributes
  |     ^^^^^^^^^^^^^^^ duplicate or conflicting attribute
  |

error: aborting due to previous error

